# tswave

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/tswave/: __init__.py  py.typed
tests/: test_smoke.py
