[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tswave"               # PyPI distribution name
version = "0.1.0"
description = "Time Series forecast model using signal processing methods."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zelin Jiang", email = "zelin0602@gmail.com" }]
keywords = ["time series", "ml", "forecast", "signal processing", "fourier transformation", "pid"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/you/your-project"
Issues   = "https://github.com/you/your-project/issues"
Changelog = "https://github.com/you/your-project/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/tswave"]

# Optional: dynamic version from VCS tags later
